--- a/server/package.json
+++ b/server/package.json
@@ -21,10 +21,12 @@
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.2",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.22",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "validator": "^13.11.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
