--- a/package.json
+++ b/package.json
@@ -17,11 +17,8 @@
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1"
   },
-  "devDependencies": {
-    "concurrently": "^8.2.2"
-  },
   "scripts": {
-    "start": "concurrently \"npm run start-backend\" \"npm start\"",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
