--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 /node_modules
+/client/node_modules
 /server/node_modules
 /.pnp
 .pnp.js
@@ -16,6 +17,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
+/client/.env
 /server/config/.env
 
 npm-debug.log*
