--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,6 @@
 # dependencies
 /node_modules
 /client/node_modules
-/server/node_modules
 /.pnp
 .pnp.js
 
@@ -18,7 +17,7 @@
 .env.test.local
 .env.production.local
 /client/.env
-/server/config/.env
+package-lock.json
 
 npm-debug.log*
 yarn-debug.log*
